name:                spec-bench
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable spec-bench
  main-is:             Bench.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.8 && <4.9,
    criterion >=1.1 && <1.2,
    deepseq

  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -ddump-ds -ddump-simpl -ddump-stg -ddump-cmm -ddump-asm -ddump-to-file -dsuppress-idinfo

executable generic-len-oneshot
  main-is:             GenericLenOneShot.hs
  build-depends:
    base >=4.8 && <4.9,
    deepseq

  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable strict-len-oneshot
  main-is:             StrictLenOneShot.hs
  build-depends:
    base >=4.8 && <4.9,
    deepseq

  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable unbox-len-oneshot
  main-is:             UnboxLenOneShot.hs
  build-depends:
    base >=4.8 && <4.9,
    deepseq

  default-language:    Haskell2010
  ghc-options:         -Wall -O2
